--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,16 @@
-// manifest.json
 {
-    "manifest_version": 2,
-    "name": "Kiosk Tab Scheduler",
-    "version": "1.0",
-    "permissions": [
-      "tabs",
-      "alarms",
-      "storage"
-    ],
-    "background": {
-      "scripts": ["background.js"],
-      "persistent": false
-    },
-    "browser_action": {
-      "default_popup": "popup.html"
-    }
+  "manifest_version": 3,
+  "name": "CCA Kiosk Tab Scheduler",
+  "version": "1.1",
+  "permissions": [
+    "tabs",
+    "alarms",
+    "storage"
+  ],
+  "background": {
+    "service_worker": "background.js"
+  },
+  "action": {
+    "default_popup": "popup.html"
   }
+}
