Use Favicon API instead

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,11 @@
   "permissions": [
     "tabs",
     "alarms",
-    "storage"
+    "storage",
+    "favicon"
+  ],
+  "host_permissions": [
+    "<all_urls>"
   ],
   "background": {
     "service_worker": "background.js"
