--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "tabs",
     "alarms",
     "storage",
-    "webRequest"
+    "webRequest",
+    "https://ccc.local:44300/"
   ],
   "host_permissions": [
     "<all_urls>",
