--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,7 @@
     "tabs",
     "alarms",
     "storage",
-    "webRequest",
-    "webRequestBlocking"
+    "webRequest"
   ],
   "host_permissions": [
     "https://*/*"
