--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
     "https://ccc.local:44300/*"
   ],
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "background.js",
+    "type": "module"
   },
   "action": {
     "default_popup": "popup.html"
