--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "CCA Kiosk Tab Scheduler",
+  "name": "CCA Scheduled Tab Switcher",
   "version": "1.2",
   "description": "A Chrome extension for scheduling tab switches in a kiosk environment",
   "permissions": [
