--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,10 @@
     "type": "module"
   },
   "action": {
-    "default_popup": "popup.html",
+    "default_popup": "popup.html"
+  },
+  "options_ui": {
+    "page": "popup.html",
     "open_in_tab": true
   },
   "content_security_policy": {
